# hello-again

./: meson.build
data/: hello-again.desktop  hello-again.metainfo.xml
src/: Application.vala
